ajouter l'article ordinateur portable MacBook aux articles disponibles

--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@ Bienvenue dans ma-boutique-en-ligne
 la liste des articles disponibles 
 ordinateur portable HP
 ordinateur portable DELL
+ordinateur portable MacBook
