ajouter un nouvel article Accent

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ la liste des articles disponibles
 ordinateur portable HP
 ordinateur portable DELL
 ordinateur portable MacBook
+ordinateur portable Accent
